# cmmlang

./: .clang-format  .clangd  .cmake-format.py  .env  .gdb_history  .gdbinit  .gitignore  CMakeLists.txt  CMakePresets.json  CmmLang  a.cpp  a.s  argc  breakpoints.gdb  callgrind.out.3334051  callgrind.out.3335055  compile.sh  compile_commands.json  init.sh  main.cpp  make.sh  res  res.asm  run.sh
.cache/clangd/index/: allocator.cpp.48FFB296769E1F40.idx  allocator.hpp.9D5FEE8792E3E364.idx  asm.cpp.6739F95E997FE6A5.idx  asm.hpp.728E9C641EF96F26.idx  asm.inl.A2FC90AD8EB13968.idx  ast.cpp.013971CC659CB909.idx  ast.hpp.04FA3E2360FF1938.idx  ast.inl.38C43D5151C09A49.idx  common.cpp.54E615F585826CFE.idx  common.hpp.B317871BAB21682D.idx  common.inl.C05AA62C9A6B9A87.idx  compiler.cpp.34CF3CBA5595A3D3.idx  compiler.hpp.313B2F1FDF7ED4C0.idx  expr.cpp.C02828B4B2AFCAC6.idx  expr.h.0E5156EDB2345CB0.idx  fs.cpp.D1C9C4F10A106ABC.idx  fs.hpp.1F7EEA4191321D13.idx  inheritance_list.h.089962D2BA3F135E.idx  ir.cpp.00B0FD06D4164760.idx  ir.hpp.E1A881B16C9019C2.idx  ir.inl.B8396274A42A56E2.idx  lang.cpp.10C95F92C41E3FB8.idx  lang.hpp.CB2F37E77B395F85.idx  lang.inl.19ACF4A968CEB1FD.idx  lexer.cpp.E2F8FD558DE1A545.idx  lexer.hpp.4E36903328E65D96.idx  macros.hpp.0CA1172DEE31D283.idx  main.cpp.6A81A1511CE20286.idx  memory.cpp.B83B3CC3AAB0C855.idx  memory.hpp.4A2ED8B31C6572AA.idx  os.cpp.52B60CE941596BC2.idx  os.hpp.ADA6417EA44F0786.idx  parser.cpp.34BF8F39EE182B51.idx  parser.hpp.466A6A8753AB581B.idx  preprocessor.cpp.75DF10D2EB2ACAE3.idx  preprocessor.hpp.715B77B42A4ADE0E.idx  semantic.cpp.5ADABC957BAD46ED.idx  semantic.hpp.AA3AA3A8C42239B5.idx  test_asm.cpp.48E5DB8C864E3B6A.idx  test_ast.cpp.0DC2D3CD72CDCD50.idx  (+22 more)
.gdb/: breakpoints.gdb  file.gdb  frames-gdb.py  pp-gdb.py  pp.py
all/: CMakeLists.txt
cmake/: CPackConf.cmake  Conan.cmake  Utils.cmake  cmm-config.cmake  cotire.cmake  iwyu.cmake  ucm.cmake
cmake/templates/: SourceDist.cmake.in
examples/: basic_func.cmm  binop2.cmm  break.cmm  char.cmm  continue.cmm  dec_pre.cmm  exit.cmm  expression.cmm  expression2.cmm  for.cmm  forward_decl.cmm  global_var.cmm  goto.cmm  paren.cmm  plus_one.cmm  post_dec.cmm  print.cmm  scope.cmm  static_global.cmm  uninitialized_int.cmm  while.cmm
gdb/: CMakeLists.txt  asm.gdbinit.in  breakpoints.gdb  commands.py  compiler.gdbinit.in  file.gdb  pp-gdb.py  test.gdbinit.in
ignore_sources/: claude_assembly.hpp
include/: allocator.hpp  asm.hpp  asm.inl  ast.hpp  ast.inl  ast_matchers.hpp  ast_visitor.hpp  ast_visitor.inl  common.hpp  common.inl  compiler.hpp  context.h  debug.hpp  decl.h  expr.h  fs.hpp  ir.hpp  ir.inl  lang.hpp  lang.inl  lexer.hpp  logging.hpp  macros.hpp  memory.hpp  messages.hpp  os.hpp  parser.hpp  preprocessor.hpp  semantic.hpp  stl.hpp  stl.inl  strings.hpp  strings.inl  term.h  token.hpp  token.inl  traits.hpp  traverser.hpp  types.hpp  types.inl  (+2 more)
include/ast/: expr.hpp  tree.hpp  tree.inl  visitor.hpp  visitor.inl
scripts/: apply_iwyu_fixes.sh
src/: allocator.cpp  asm.cpp  ast.cpp  ast_visitor.cpp  common.cpp  compiler.cpp  expr.cpp  fs.cpp  ir.cpp  lang.cpp  lexer.cpp  memory.cpp  messages.cpp  os.cpp  parser.cpp  preprocessor.cpp  semantic.cpp  strings.cpp  token.cpp  traverser.cpp  types.cpp  visitor.cpp
src/ast/: tree.cpp  visitor.cpp
standalone/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  conftest.py  e2e.py  test_asm.cpp  test_ast.cpp  test_base.hpp  test_bindings.cpp  test_expression.cpp  test_functions.cpp  test_modifier.cpp  test_parser.cpp  test_preprocessor.cpp  test_registers.cpp  test_state.cpp  test_strings.cpp  test_token.cpp  test_types.cpp
test/integration/: CMakeLists.txt  conftest.py  conftest.py.bak  e2e.py  e2e.py.bak  e2e.py.bak2
